Revert "Fix width of avatar on smaller screens"
This reverts commit 795f7ca11a9eb97a415450f4322bdd88d92b85e8.

--- a/app/stylesheets/bundles/roster.scss
+++ b/app/stylesheets/bundles/roster.scss
@@ -19,45 +19,32 @@
 @import "base/environment";
 @import "components/context_search";
 
-.rosterUser {
-  // define width and padding in order to calculate table cell width for display
-  $online-now-width: 30px;
-  $online-now-padding: 5px;
+// to reduce the avatar from displaying so large in the roster table
+.rosterUser .avatar {
+  width: $ic-sp*2;
+  height: $ic-sp*2;
 
-  td {
-    // calculate the width of the avatar and online now indicator
-    min-width: $ic-sp*2 + $online-now-padding*2 + $online-now-width;
+  &:hover {
+    text-decoration: none;
   }
 
-  // to reduce the avatar from displaying so large in the roster table
-  .avatar {
-    width: $ic-sp*2;
-    height: $ic-sp*2;
+    &.online-now {
+      border-color: #24a936;
+      display: inline-block;
+      margin-right: 5px;
 
-    &:hover {
-      text-decoration: none;
-    }
-
-      &.online-now {
-        border-color: #24a936;
-        display: inline-block;
-        margin-right: 5px;
-
-        &::after {
-          content: 'online';
-          font-size: 7px;
-          line-height: 1;
-          margin-left: 19px;
-          background-color: #24a936;
-          border-radius: 20px;
-          color: #fff;
-          font-weight: bold;
-          text-transform: uppercase;
-          vertical-align: middle;
-          padding: 2px $online-now-padding;
-          width: $online-now-width;
-          text-align: center;
-      }
+      &::after {
+        content: 'online';
+        font-size: 7px;
+        line-height: 1;
+        margin-left: 19px;
+        background-color: #24a936;
+        border-radius: 20px;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+        vertical-align: middle;
+        padding: 2px 5px;
     }
   }
 }
